--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "dotenv": "^17.2.1",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.8.2",
-    "dotenv": "^17.2.1",
-    "pg": "^8.16.3"
+    "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
     "@types/node": "^24.3.0",
@@ -24,6 +24,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.0",
+    "terser": "^5.43.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.0"
   }
