--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.24",
     "tailwindcss": "^3.3.0",
+    "terser": "^5.43.1",
     "typescript": "^5.0.0",
     "vite": "^4.4.0"
   }
