--- a/.gitignore
+++ b/.gitignore
@@ -65,7 +65,7 @@ jspm_packages/
 
 # Gatsby files
 .cache/
-public
+# public - commented out to allow public directory for Vite static assets
 
 # Storybook build outputs
 .out
